--- a/pom.xml
+++ b/pom.xml
@@ -153,13 +153,13 @@
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-api</artifactId>
             <version>2.2.7</version>
-            <scope>provided</scope>
+            <!-- <scope>provided</scope> -->
         </dependency>
         <dependency>
             <groupId>com.sun.faces</groupId>
             <artifactId>jsf-impl</artifactId>
             <version>2.2.7</version>
-            <scope>provided</scope>
+           <!--  <scope>provided</scope> -->
         </dependency>
 
         <!-- Test -->
